--- a/MaxiDigital-Case.xcodeproj/xcshareddata/xcschemes/MaxiDigital-Case.xcscheme
+++ b/MaxiDigital-Case.xcodeproj/xcshareddata/xcschemes/MaxiDigital-Case.xcscheme
@@ -26,9 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      disableMainThreadChecker = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E37C84CF8A92A90FAB17747F"
+               BuildableName = "MaxiDigital_CaseTests.xctest"
+               BlueprintName = "MaxiDigital-CaseTests"
+               ReferencedContainer = "container:MaxiDigital-Case.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
