--- a/MaxiDigital-Case.xcworkspace/xcshareddata/xcschemes/MaxiDigital-Case-Workspace.xcscheme
+++ b/MaxiDigital-Case.xcworkspace/xcshareddata/xcschemes/MaxiDigital-Case-Workspace.xcscheme
@@ -42,6 +42,20 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E37C84CF8A92A90FAB17747F"
+               BuildableName = "MaxiDigital_CaseTests.xctest"
+               BlueprintName = "MaxiDigital-CaseTests"
+               ReferencedContainer = "container:MaxiDigital-Case.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "84BED1D5215A172B963C9929"
                BuildableName = "UILab.framework"
                BlueprintName = "UILab"
@@ -56,6 +70,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E37C84CF8A92A90FAB17747F"
+               BuildableName = "MaxiDigital_CaseTests.xctest"
+               BlueprintName = "MaxiDigital-CaseTests"
+               ReferencedContainer = "container:MaxiDigital-Case.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
